# homeassistant-sungrow

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  INFO.md  README.md  compare.md  coverage.xml  dump-master.yaml  dump-slave.yaml  dump_1.yaml  dump_master_charging.yaml  dump_master_charging_1_minute_later.yaml  dump_master_discharge.yaml  dump_master_winets.yaml  dump_real_inverter_data.py  dump_slave.yaml  dump_slave_2.yaml  dump_slave_discharge.yaml  dump_slave_winets.yaml  hacs.json  info.md  pyproject.toml  repository.json  requirements.txt  ruff.toml  script_dump_raw_inverter_data.py  script_sync_yaml.py  setup.cfg  update_ha.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: SCA.yaml  ci.yml  hacs.yaml  hassfest.yml
custom_component/sungrow/: config.yaml  manifest.json
custom_components/sungrow/: __init__.py  binary_sensor.py  config.py  config.yaml  config_flow.py  const.py  manifest.json  registers-sungrow.yaml  sensor.py  strings.json  sungather.py  test_inverter_slave_detection.py
custom_components/sungrow/SunGather/: inverter.py
custom_components/sungrow/core/: __init__.py  connection_websocket.py  const.py  deserialize.py  extra_sensors.py  http.py  inverter.py  inverter_types.py  modbus.py  modbus_base.py  modbus_http.py  modbus_py.py  modbus_range_builder.py  modbus_types.py  registers-sungrow.yaml  signals.py  utils.py
custom_components/sungrow/translations/: en.json
scripts/: README.md  check_signal_availability.py  compare_access.py  dump.py  dump_raw_inverter_data.py  fix_path.py  script_dump_raw_inverter_data.py  script_sync_yaml.py  sync_unsupported_winet_registers.py  sync_yaml.py  websocket_experiment.py
sungrow/: config.yaml  inverter.py  manifest.json
tests/: e2e_setup.py  test_config_flow.py  test_setup_e2e.py
tests/core/: fix_path.py  test_deserialize.py  test_deserialize_basics.py  test_deserialize_regression.py  test_inverter_with_mocks.py  test_inverter_with_real_data.py  test_modbus.py  test_modbus_base.py  test_modbus_range_builder.py  test_signals.py
tests/quick/core/: test_modbus_http.py
tests/slow/: e2e_setup.py  test_config_flow.py  test_setup_e2e.py
tests/slow/core/: test_inverter_with_real_data.py
tests/slow/test_data/: test_setup_e2e.py
tests/test_data/: dump_master.yaml  dump_slave.yaml  master_dump.yaml  slave_dump.yaml  slave_dump_unknown_model.yaml
