[tool.poetry]
name = "homeassistant-sungrow"
version = "0.0.2"
description = "Sungrow integration"
authors = ["Alexander Lanin <alex@lanin.de>"]
license = "to be decided"
readme = "README.md"
packages = [{ include = "custom_components" }, { include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymodbus = ">=3.6.4"
homeassistant = ">=2024"
tqdm = "*"
aiohttp = ">=3.9.3"

tabulate = "*"
requests = "*"
beartype = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-stub = "*"
pytest-cov = "*"
pytest-homeassistant-custom-component = "*"
pytest-xdist = "*"

ruff = "*"
mypy = "*"
types-requests = "*"
types-PyYAML = "*"
types-tabulate = "*"
homeassistant-stubs = "*"
types-tqdm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sungrow_dump = 'scripts.dump:run'
